# ENSTQuoridor

./: .clang-uml  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  lines_count.sh  vcpkg.json
assets/img/: quoridor.icns
docs/: AI_DOCU.md  AI_Documentation.md  PVE_DEMO_GUIDE.md  Task2_Implementation.md  USER_GUIDE.md  test_creation.md
docs/architecture/: architecture_quoridor.tex
docs/installation/: INSTALLATION.md  PACKAGING.md  game.md  packaging-macos.md
docs/installations/: app.md  game.md  vcpkg and SFML.md
docs/planning/: Quoridor Proposition.txt  iteration1_tasks.md  iteration2_tasks.md  iteration3_tasks.md  iteration4_tasks.md  model_changes_report.md  model_dev_report.md  model_feats.md  planification_quoridor.tex
docs/planning/architecture/: architecture_quoridor.tex
docs/planning/exigences/: exigences_quoridor.tex
docs/tasks/: Task2_Implementation.md
docs/tests/: GUIDE_TESTS.md  PVE_DEMO_GUIDE.md
docs/uml/: controller_class_diagram.puml  full_class_diagram.puml  model_class_diagram.puml  view_class_diagram.puml
include/controller/: Game.hpp  GameOverScene.hpp  GameScene.hpp  HowToPlayScene.hpp  InputHandler.hpp  MenuScene.hpp  Scene.hpp  SceneManager.hpp  server.hpp
include/model/: AI.hpp  Board.hpp  GameConfig.hpp  Pathfinder.hpp  PlayerId.hpp  Rules.hpp  State.hpp
include/view/: Button.hpp  GameView.hpp  Render2D.hpp  StartView.hpp  View.hpp
scripts/: bootstrap.ps1  bootstrap.sh  generate-icon.sh  package-linux.sh  package-macos.sh
src/app/: main.cpp
src/controller/: Game.cpp  GameOverScene.cpp  GameScene.cpp  HowToPlayScene.cpp  InputHandler.cpp  MenuScene.cpp  SceneManager.cpp  server.cpp
src/model/: AI.cpp  Board.cpp  Pathfinder.cpp  Rules.cpp  State.cpp
src/view/: Button.cpp  GameView.cpp  Render2D.cpp  StartView.cpp
tests/: CMakeLists.txt  test_ai_core.cpp  test_board.cpp  test_heuristics.cpp  test_input_handler.cpp  test_jumps.cpp  test_minimax.cpp  test_pathfinder.cpp  test_pve_visual.cpp  test_rules.cpp  test_state.cpp  test_view.cpp  test_walls.cpp
